@@ -1,4 +1,4 @@
 @set UPDATED 30 October 2006
 @set UPDATED-MONTH October 2006
-@set EDITION 2.2.2a3
-@set VERSION 2.2.2a3
+@set EDITION 2.2.2b1
+@set VERSION 2.2.2b1
