@@ -1500,7 +1500,8 @@ struct TwoDimList
    {
    short is2d;                  /* true if list > 1 */
    short rounds;
-   char  sep;                   /* char used to divide into strings with 1 variable */
+   short tied;                  /* do variables march together or in rounds ? */
+   char  sep;                   /* list separator */
    struct Item *ilist;          /* Each node contains a list */
    struct Item *current;        /* A static working pointer */
    struct TwoDimList *next;
